# deploy-python-applications-on-google-cloud-platform

./: .gitignore  .pre-commit-config.yaml  README.md  Technical Terms.md  pyproject.toml
