[tool.poetry]
name = "deploy-python-applications-on-google-cloud-platform"
version = "0.1.0"
description = ""
authors = ["Pedro Alves pedroccufc@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
